--- a/app/src/main/res/layout/fragment_latest_news.xml
+++ b/app/src/main/res/layout/fragment_latest_news.xml
@@ -57,7 +57,6 @@
 
     </RelativeLayout>
 
-
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
@@ -65,6 +64,7 @@
         android:horizontalSpacing="3dp"
         android:layout_below="@+id/relatuive"
         android:verticalSpacing="3dp"
+        android:layout_marginTop="5dp"
         android:layout_above="@+id/search_ad_view"
         android:stretchMode="columnWidth"/>
 
