--- a/app/src/main/res/layout/fragment_listed_page.xml
+++ b/app/src/main/res/layout/fragment_listed_page.xml
@@ -3,21 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.TabLayout
-            app:tabTextColor="@color/orange"
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"
             android:background="@color/white"
+            app:tabGravity="fill"
             app:tabIndicatorColor="@color/white"
+            app:tabMode="fixed"
             app:tabSelectedTextColor="@color/white"
-            app:tabGravity="fill"/>
+            app:tabTextColor="@color/orange" />
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
