--- a/app/src/main/res/layout/list_my_news.xml
+++ b/app/src/main/res/layout/list_my_news.xml
@@ -5,24 +5,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
+
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/eventcard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:padding="3dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:visibility="visible"
+        ads:cardCornerRadius="15dp"
+
+        ads:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
         <RelativeLayout
             android:id="@+id/layout1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+
+            <LinearLayout
+                android:id="@+id/linear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-5dp"
+                android:orientation="horizontal">
+
+                <com.android.volley.toolbox.NetworkImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_below="@+id/linear"
+                    android:adjustViewBounds="true"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/buyer"
+                    android:scaleType="fitXY" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tag"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli_semibold"
+                        android:text="Loading"
+                        android:textColor="#4b4b4b"
+                        android:textSize="16sp" />
+
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_below="@+id/linear"
+                            android:adjustViewBounds="true"
+                            android:layout_marginLeft="8dp"
+                            android:layout_gravity="center_vertical"
+                            android:backgroundTint="#4b4b4b"
+                            android:background="@drawable/right"
+                            android:scaleType="fitXY" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/offersText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/muli_semibold"
+                        android:text="Loading"
+                        android:textColor="#828282"
+                        android:textSize="12sp" />
+                </LinearLayout>
+            </LinearLayout>
 
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/imgaeView"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
+                android:layout_below="@+id/linear"
+                android:layout_marginTop="5dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY" />
 
@@ -34,11 +113,10 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
+                android:layout_marginTop="5dp"
                 android:text="Loading..."
-                android:textColor="@color/grayText"
-                android:layout_below="@+id/imgaeView"
-                android:textStyle="bold" />
+                android:textColor="#1f1f1f"
+                android:layout_below="@+id/imgaeView" />
 
 
             <ImageView
@@ -48,42 +126,32 @@
                 android:layout_below="@+id/name"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="6dp"
+                android:visibility="gone"
                 android:tint="@color/grayText"
-                android:background="@drawable/calender_n"
-                 />
+                android:background="@drawable/calender_n"/>
 
-            <TextView
-                android:id="@+id/offersText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="6dp"
-                android:layout_below="@+id/name"
-                android:layout_toRightOf="@+id/calpic"
-                android:text="Loading..."
-                android:textColor="@color/grayText"
-                android:textStyle="bold" />
+            <!--<TextView-->
+               <!---->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="5dp"-->
+                <!--android:layout_below="@+id/name"-->
+                <!--android:layout_toRightOf="@+id/calpic"-->
+                <!--android:text="Loading..."-->
+                <!--android:textColor="@color/grayText"-->
+                <!--android:textStyle="bold" />-->
 
-            <TextView
-                android:id="@+id/tag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/strock_news"
-                android:fontFamily="@font/muli_semibold"
-                android:gravity="right"
-                android:text="Loading"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp"
-                android:layout_below="@+id/name"
-                android:layout_toRightOf="@+id/date_txt"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
 
         </RelativeLayout>
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@drawable/strock_dot"/>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="10dp"-->
+        <!--android:background="@drawable/strock_dot"/>-->
+    </android.support.v7.widget.CardView>
+
+
+
 
 
     <LinearLayout
@@ -183,11 +251,11 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@drawable/strock_dot"
-        android:visibility="gone"/>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="10dp"-->
+        <!--android:background="@drawable/strock_dot"-->
+        <!--android:visibility="gone"/>-->
 
     <!--</android.support.v7.widget.CardView>-->
 
