--- a/app/src/main/res/layout/page_item2.xml
+++ b/app/src/main/res/layout/page_item2.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:id="@+id/cardView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="2dp"-->
+       <!---->
+        <!--app:cardElevation="2dp">-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="165dp"
         android:scaleType="fitXY" />
-
 
 
     <TextView
@@ -22,10 +34,10 @@
         android:textSize="16dp"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textColor="@color/grayText"/>
+        android:textColor="#1f1f1f"/>
 
+    </LinearLayout>
+    <!--</android.support.v7.widget.CardView>-->
 
 
 </RelativeLayout>
